<resources>
    <string name="app_name">UniPath</string>
    <string name="app_label">Search</string>
    <string name="search_hint">search</string>
    <string name="search">Search</string>
    <string name="title_activity_test">test</string>
    <string name="profile">profile</string>
    <string name="college_name">College Name</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="progress_label">Hi, first name! Here\'s your progress.</string>
    <string name="log_out">Log out</string>
    <string name="early_decision">Early Decision</string>
    <string name="regular_desicion">Regular Desicion</string>
    <string name="description">Description</string>
    <string name="date">date</string>
    <string name="deadline_description">Deadline Description</string>
    <string name="msg_token_fmt">Token</string>

    <string name="google_maps_api_key">AIzaSyCZ3E-xEQqcWccJqAQaAR2zo_4DZshOCT0</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="email_registration">Email Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>

    <!-- FCM Related Strings -->
    <string name="default_notification_channel_id" translatable="false">cme.juliasson.unipath.default_notification_channel_id</string>
    <string name="data_type">data_type</string>
    <string name="reminder">reminder</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>

    <!-- Bundle Extras -->
    <string name="intent_user_id">intent_user_id</string>

    <!-- Dialog Names -->
    <string name="dialog_message">dialog_message</string>

    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>
    <string name="dbnode_messages">messages</string>

    <!-- Firebase Database Fields -->
    <string name="field_message">message</string>
    <string name="field_user_id">user_id</string>
    <string name="field_messaging_token">messaging_token</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="net_calculator">Net Calculator</string>

    <!-- Spinner options for Search Filtering -->
    <string-array name="size_options" >
        <item>--Select--</item>
        <item>Small (&lt;5k students)</item>
        <item>Medium (5k-15k students)</item>
        <item>Large (&gt;15k students)</item>
    </string-array>

    <string-array name="cost_options">
        <item>--Select--</item>
        <item>&lt;$20k</item>
        <item>$20k-$40k</item>
        <item>&gt;$40k</item>
    </string-array>

    <string-array name="acceptance_options">
        <item>--Select--</item>
        <item>%5</item>
        <item>%10</item>
        <item>%15</item>
        <item>%20</item>
        <item>%25</item>
        <item>%30</item>
        <item>%35</item>
        <item>%40</item>
        <item>%45</item>
        <item>%50</item>
        <item>%55</item>
        <item>%60</item>
        <item>%65</item>
        <item>%70</item>
        <item>%75</item>
        <item>%80</item>
        <item>%85</item>
        <item>%90</item>
        <item>%95</item>
    </string-array>

    <string-array name="state_options">
        <item>--Select--</item>
        <item>Outside US</item>

        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>

        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>

        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>

        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>

        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>

        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>

        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>

        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>

        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>

        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string-array name="citizenship_status">
        <item>--Select--</item>
        <item>USA</item>
        <item>non-USA</item>
    </string-array>
</resources>
