<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greygradient">

    <TextView
        android:id="@+id/tvProgressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/progress_label"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/solid_white"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/pbProgress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:progress="0"
        android:progressBackgroundTint="@color/background_lighter_orange"
        android:progressTint="@color/progress_green"
        android:layout_below='@id/tvProgressLabel' />

    <RelativeLayout
        android:id="@+id/rlUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:layout_below="@id/pbProgress"
        android:background="@drawable/button_border_orange" >

        <TextView
            android:id="@+id/tvUserInfoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="User Info"
            android:textColor="@color/solid_white" />

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/tvUserInfoLabel"
            android:background="@drawable/button_border_orange"
            app:srcCompat="@color/solid_black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_marginLeft="16dp"
            android:layout_below="@id/tvUserInfoLabel" >

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white_80_transparent"
                android:layout_alignParentRight="true"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFirstName"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/white_80_transparent"
                tools:text="email" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCollegeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bvLogout"
        android:layout_below="@id/rlUserInfo"
        android:background="@drawable/button_border_orange"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvFavoritesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Favorite Colleges"
            android:textColor="@color/solid_white" />

        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFavoritesLabel"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvCollegeList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

        </android.support.v4.widget.SwipeRefreshLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/bvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/background_orange"
        android:text="@string/log_out"
        android:textColor="@color/solid_white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>